--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
   geolocator: ^13.0.2
   web_socket_channel: ^3.0.1
   http: ^1.2.2
+  flutter_localizations:
+    sdk: flutter
+  image_picker: ^1.1.2
+  font_awesome_flutter: ^10.8.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -67,8 +72,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
