--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   image_picker: ^1.1.2
   font_awesome_flutter: ^10.8.0
   google_fonts: ^6.2.1
+  provider: ^6.1.2
+  shared_preferences: ^2.3.4
 
 dev_dependencies:
   flutter_test:
