--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   google_fonts: ^6.2.1
   provider: ^6.1.2
   shared_preferences: ^2.3.4
+  swipeable_button_view: ^0.0.2
+  page_transition: ^2.1.0
+  flutter_svg: ^2.0.16
 
 dev_dependencies:
   flutter_test:
