--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  network_info_plus: ^6.1.1
+  network_info_plus: ^6.1.2
   permission_handler: ^11.3.1
   mobile_scanner: ^6.0.2
   pretty_qr_code: ^3.3.0
@@ -53,6 +53,12 @@ dependencies:
   swipeable_button_view: ^0.0.2
   page_transition: ^2.1.0
   flutter_svg: ^2.0.16
+  lordicon: ^1.0.3
+  skeleton_loader: ^2.0.0+4
+
+
+
+
 
 dev_dependencies:
   flutter_test:
