--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   flutter_svg: ^2.0.16
   lordicon: ^1.0.3
   skeleton_loader: ^2.0.0+4
+  cached_network_image: ^3.4.1
+  timezone: ^0.10.0
+  mime_type: ^1.0.1
 
 
 
@@ -86,6 +89,11 @@ flutter:
 
   assets:
     - assets/
+    - assets/SvgNavbar/Home.svg
+    - assets/SvgNavbar/Notifi.svg
+    - assets/SvgNavbar/Calender.svg
+    - assets/SvgNavbar/profile.svg
+    - assets/SvgNavbar/background.svg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
