--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   flutter_advanced_drawer: ^1.3.7
   lottie: ^2.7.0
   circle_nav_bar: ^2.2.0
+  navigation_view: ^1.0.6
+  fl_chart: ^0.70.1
 
 
 
@@ -100,10 +102,12 @@ flutter:
     - assets/SvgNavbar/Calender.svg
     - assets/SvgNavbar/profile.svg
     - assets/SvgNavbar/background.svg
+    - assets/SvgNavbar/
     - assets/SvgNotifi/
     - assets/SvgProfile/update.svg
     - assets/SvgProfile/
     - assets/Calender/
+    - assets/Customhome/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
