finish ui -=--------------------Done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   circle_nav_bar: ^2.2.0
   navigation_view: ^1.0.6
   fl_chart: ^0.70.1
+  flutter_keyboard_visibility: ^6.0.0
 
 
 
